--- a/report.tex
+++ b/report.tex
@@ -229,6 +229,8 @@ There is a possible issue of patent infringement concerning the doctrine of equi
 \newpage
 \section{Design Solution Summary}
 
+
+\newpage
 \section{Design Verification/Validation Summary}
 
 
@@ -352,6 +354,62 @@ The small database isn't descriptive enough, the medium database has trouble wit
 \subsubsection{Money Classification}
 
 \subsection{iOS App}
+
+\newpage
+\begin{landscape}
+    \subsection{Engineering Design Specification}
+    \subsubsection{v0.1}
+    \begin{center}
+        \includegraphics[page=1,width={0.86\linewidth}]{pdf/eds_0.1.pdf}
+        \newpage
+        \includegraphics[page=2,width={0.86\linewidth}]{pdf/eds_0.1.pdf}
+    \end{center}
+    
+    \newpage
+    \subsubsection{v0.2}
+    \label{eds-0.2}
+    \begin{center}
+        \includegraphics[page=1,width={0.86\linewidth}]{pdf/eds_0.2.pdf}
+        \newpage
+        \includegraphics[page=2,width={0.86\linewidth}]{pdf/eds_0.2.pdf}
+        \newpage
+        \includegraphics[page=3,width={0.86\linewidth}]{pdf/eds_0.2.pdf}
+    \end{center}
+    
+    \newpage
+    \subsubsection{v0.3}
+    \label{eds-0.3}
+    \begin{center}
+        \includegraphics[page=1,width={0.86\linewidth}]{pdf/eds_0.3.pdf}
+        \newpage
+        \includegraphics[page=2,width={0.86\linewidth}]{pdf/eds_0.3.pdf}
+        \newpage
+        \includegraphics[page=3,width={0.86\linewidth}]{pdf/eds_0.3.pdf}
+        \newpage
+        \includegraphics[page=4,width={0.86\linewidth}]{pdf/eds_0.3.pdf}
+        \newpage
+        \includegraphics[page=5,width={0.86\linewidth}]{pdf/eds_0.3.pdf}
+    \end{center}
+    
+        \newpage
+
+    \subsubsection{v1.0}
+    \label{eds-1.0}
+    \begin{center}
+        \includegraphics[page=1,width={0.86\linewidth}]{pdf/eds_1.0.pdf}
+        \newpage
+        \includegraphics[page=2,width={0.86\linewidth}]{pdf/eds_1.0.pdf}
+        \newpage
+        \includegraphics[page=3,width={0.86\linewidth}]{pdf/eds_1.0.pdf}
+        \newpage
+        \includegraphics[page=4,width={0.86\linewidth}]{pdf/eds_1.0.pdf}
+        \newpage
+        \includegraphics[page=5,width={0.86\linewidth}]{pdf/eds_1.0.pdf}
+        \newpage
+        \includegraphics[page=6,width={0.86\linewidth}]{pdf/eds_1.0.pdf}
+    \end{center}
+\end{landscape}
+
 
 \newpage
 \section{Appendix B - Verification and Validation Data}
